# typstwriter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  typstwriter.spec
.github/workflows/: ci.yml  release.yml
docs/: example_config.ini
tests/: test_compiler.py  test_compiler_tools.py  test_configuration.py  test_editor.py  test_fs_explorer.py  test_globalstate.py  test_logging.py  test_pdf_viewer.py  test_util.py
typstwriter/: __init__.py  actions.py  arguments.py  compiler.py  compiler_tools.py  configuration.py  editor.py  enums.py  fs_explorer.py  globalstate.py  logging.py  mainwindow.py  menubar.py  pdf_viewer.py  recentfiles.py.old  settings_gui.py  syntax_highlighting.py  toolbar.py  typstwriter.py  util.py
